<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">U Want To Learn Content Provider</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="no_data_available">No Data Available</string>
    <string name="enter_age">Enter Age</string>

</resources>
